Add an assertion to the CSS loader for cases when sheet decoding fails. stopgap measure for bug 106843, r=pierre, sr=attinasi